<resources>
    <string name="about">关于</string>

    <string name="about_content">\t曾经的那个秋天，黄花落在我的窗前。\n\t正当我感叹秋色时，团长大人跑过来跟我说：“阿虚，我们写一个手机软件吧，很简单的软件。”\n\t“哈？什么软件？”\n\t“嗯，就是一个写日记的软件啦，快起来准备准备，我去把美工叫来，我们开工！”\n\t看着仿若拥有无限级别精力的团长，以及她那手舞足蹈般的走路姿势，我知道，苦日子又要来了....\n\t许久许久后，一款叫“疾风日记”的软件终于在各个商店上架。\n\t只是，从那时开始，团长就再也不能像以前那样，在我身旁摇头晃脑，‘指手指脚’，一会跑美工组那边，一会又跑开发组这边，我也知道，月有阴晴圆缺，人有悲欢离合，迟早都会物是人非的....\n\n\t好吧，我承认，上面那个故事是我虚构出来的，根据真实情节虚构，请勿当真。\n\t不管如何，我们都会尽力保持更新，尽力做出让团长和诸位用户君都满意的作品，如果我们决定不再更新，我们会在最后一个版本做出说明的，谢谢大家的支持\n\n红叶工作室出品\n红叶工作室保留一切解释权\n反馈邮箱qiuych3@gmail.com</string>

    <string name="about_detail">疾风日记外传</string>

    <string name="alp_42447968_cmd_confirm">Confirm</string>
    <string name="alp_42447968_cmd_continue">Continue</string>
    <string name="alp_42447968_cmd_forgot_pattern">Forgot pattern?</string>
    <string name="alp_42447968_cmd_retry">Retry</string>
    <string name="alp_42447968_loading">Loading…</string>
    <string name="alp_42447968_lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="alp_42447968_lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="alp_42447968_lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="alp_42447968_lockscreen_access_pattern_start">Pattern started</string>
    <string name="alp_42447968_msg_connect_4dots">Connect at least 4 dots.\nTry again…</string>
    <string name="alp_42447968_msg_draw_an_unlock_pattern">Draw an unlock pattern:</string>
    <string name="alp_42447968_msg_draw_pattern_to_unlock">Draw pattern to unlock:</string>
    <string name="alp_42447968_msg_pattern_recorded">Pattern recorded!</string>
    <string name="alp_42447968_msg_redraw_pattern_to_confirm">Redraw pattern to confirm:</string>
    <string name="alp_42447968_msg_release_finger_when_done">Release finger when done</string>
    <string name="alp_42447968_msg_try_again">Sorry, try again</string>
    <string name="alp_42447968_msg_your_new_unlock_pattern">Your new unlock pattern:</string>

    <plurals name="alp_42447968_pmsg_connect_x_dots">
        <item quantity="one">Connect at least %1$d dot.\nTry again…</item>
        <item quantity="other">Connect at least %1$d dots.\nTry again…</item>
    </plurals>

    <string name="app_name_english">WIND DIARY</string>

    <string name="app_name">疾风日记</string>

    <string name="button_save">保存</string>

    <string name="create_lock_pattern_password_tips">我们需要你提供一个特殊的密码，当你忘记手势密码的时候，你可以用这个特殊密码来修改手势（请牢记这个密码）：</string>

    <string name="confirm">确认</string>

    <string name="confirm_three">确认 (3)</string>

    <string name="enter_lock_pattern_password">请输入验证用的密码，之后手势密码将被清除</string>

    <string name="enter_lock_pattern_password_wrong">验证密码错误</string>

    <string name="export_complete">导出结束</string>

    <string name="export_data">导出</string>

    <string name="export_import">导出/导入</string>

    <string name="export_to_json">导出为JSON文件</string>

    <string name="export_to_json_detail">导出日记为json备份文件，该文件位于SD卡一个名为“疾风日记”的文件夹中，以供导入使用（会覆盖之前的备份文件，如果已经备份，请先移走备份文件）</string>

    <string name="export_to_local_json_file_name">backup.json</string>

    <string name="export_to_txt">导出为TXT文件</string>

    <string name="export_to_txt_detail">导出日记到多个txt文件中，txt文件位于SD卡一个名为“疾风日记”的文件夹中</string>

    <string name="file_dir_name">疾风日记</string>

    <string name="help">帮助</string>

    <string name="import_complete">导入完成</string>

    <string name="import_complete_fail">导入失败</string>

    <string name="import_data">导入</string>

    <string name="import_from_json">从JSON文件导入</string>

    <string name="import_from_json_detail">从SD卡一个名为“疾风日记”的文件夹中，导入JSON备份文件（如果该文件夹中没有backup.json文件，则导入失败）</string>

    <string name="like_this_app">支持疾风日记</string>

    <string name="like_this_app_detail">如果你喜欢这个软件，请点击这个链接到应用商店里给我们打个五星好评，这将是对我们的极大肯定和鼓励</string>

    <string name="lock_pattern">手势密码</string>

    <string name="lock_pattern_on">开启手势密码</string>

    <string name="night_mode">夜间模式</string>

    <string name="night_mode_on">开启夜间模式</string>

    <string name="night_mode_off">夜间模式已关闭</string>

    <string name="previous">往昔</string>

    <string name="setting">设置</string>

    <string name="statistics">数据统计</string>

    <string name="still_building">真的很不好意思，此模块尚在完善中</string>

    <string name="today">今日</string>

    <!-- -->


    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="notify_priority">notify_priority</string>

    <string name="title_activity_setting">设置</string>

    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
