<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="@string/help">
        <Preference
            android:key="like"
            android:layout="@layout/preference_item"
            android:summary="@string/like_this_app_detail"
            android:title="@string/like_this_app">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="market://details?id=com.qiuyongchen.diary" />
        </Preference>
        <Preference
            android:key="about"
            android:layout="@layout/preference_item"
            android:summary="@string/about_detail"
            android:title="@string/about"/>
    </PreferenceCategory>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="sync_frequency"
        android:title="@string/pref_title_sync_frequency"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:defaultValue="180"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <Preference android:title="@string/pref_title_system_sync_settings">
        <intent android:action="android.settings.SYNC_SETTINGS" />
    </Preference>

</PreferenceScreen>
